[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trajrl"
version = "0.3.0"
description = "Official skill collection for TrajectoryRL (Bittensor SN11) — discover and run subnet skills."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "typer>=0.9",
    "httpx>=0.25",
    "rich>=13.0",
]

[project.scripts]
trajrl = "trajrl.cli:app"
