[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trajrl"
version = "2.0.0"
description = "Official Python CLI for TrajectoryRL (Bittensor SN11) — skill hub, live subnet state, validator analysis, and on-chain queries."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "typer>=0.9",
    "httpx>=0.25",
    "rich>=13.0",
    "bittensor>=8.0",
]

[project.scripts]
trajrl = "trajrl.cli:app"

[tool.setuptools.packages.find]
include = ["trajrl*"]
